syntax = "proto3";

package auth;

option go_package = "./grpc-proto/auth";

message AuthReq {
  string email = 1;
  string password = 2;
}

message RegisterReq {
  string email = 1;
  string password = 2;
}

message AuthRes {
  string token = 1;
  string refreshToken = 2;
}

message UpdateAuthReq {
  string refreshToken = 1;
}

message UpdateAuthRes {
  string token = 1;
  string refreshToken = 2;
}

message Stub {}

service AuthService {
  rpc Auth (AuthReq) returns (AuthRes) {
  }

  rpc Register (RegisterReq) returns (AuthRes) {
  }

  rpc UpdateAuth (UpdateAuthReq) returns (UpdateAuthRes) {
  }

  rpc Logout (Stub) returns (Stub) {
  }
}
